# WaterSurfaceWavelets

./: CMakeLists.txt  LICENSE  README.org
data/: image_to_levelset.nb
notebooks/: OceanWaveSpectra.nb
src/: CMakeLists.txt  Enviroment.cpp  Enviroment.h  Global.h  Grid.cpp  Grid.h  ProfileBuffer.cpp  ProfileBuffer.h  Spectrum.cpp  Spectrum.h  StokesWave.h  WaveGrid.cpp  WaveGrid.h  WaveGrid.hpp  global.h  main.cpp
src/data/: harbor_data.cpp  island_data.cpp
src/math/: ArrayAlgebra.h  Integration.h  Math.h
src/math/interpolation/: CMakeLists.txt  DomainInterpolation.h  Interpolation.h  LagrangianInterpolation.h  ValueTraits.h  meta_utils.h
src/tests/: CMakeLists.txt  DrawingPrimitives.cpp  DrawingPrimitives.hpp  integration_test.cpp  sandbox.cpp
src/visualization/: CMakeLists.txt  Demo.cpp  DirectionNumber.h  MyApplication.cpp  ProfileVisualization.cpp  WaterSurfaceMesh.cpp  WaterSurfaceMesh.h  WaterSurfaceShader.cpp  WaterSurfaceShader.frag  WaterSurfaceShader.glsl  WaterSurfaceShader.h  WaterSurfaceShader.vert  resources.conf
src/visualization/base/: CMakeLists.txt  Camera.h  SceneBase3D.cpp  SceneBase3D.h  SimulationLoop.h
src/visualization/drawables/: CMakeLists.txt  Primitives3D.cpp  Primitives3D.h  VisualizationPrimitives.cpp  VisualizationPrimitives.h
src/visualization/waterSurface/: #CMakeLists.txt#  CMakeLists.txt  DirectionNumber.h  WaterSurfaceMesh.cpp  WaterSurfaceMesh.h  WaterSurfaceShader.cpp  WaterSurfaceShader.frag  WaterSurfaceShader.glsl  WaterSurfaceShader.h  WaterSurfaceShader.vert  main.cpp  resources.conf
